ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: old-webpage-ingress
  namespace: webpage
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - old.keithmackay.com
      secretName: old-cert-secret
  rules:
    - host: old.keithmackay.com
      http:
        paths:
          - backend:
              serviceName: old-webpage-service
              servicePort: 8080
