k8s.yml
---
apiVersion: v1
kind: Service
metadata:
  name: old-webpage-service
  namespace: webpage
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: old-webpage-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: old-webpage
  namespace: webpage
  labels:
    app: old-webpage-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: old-webpage-service
  template:
    metadata:
      labels:
        app: old-webpage-service
    spec:
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
      containers:
        - name: server
          image: registry.gitlab.com/kamackay/old-webpage:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: old-webpage-ingress
  namespace: webpage
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - old.keithmackay.com
      secretName: old-cert-secret
  rules:
    - host: old.keithmackay.com
      http:
        paths:
          - backend:
              serviceName: old-webpage-service
              servicePort: 8080
